CU-2a39rcj Fixed poll update bug and some other minor bug fixes